[workspace]
members = ["packages/vectis-tests", "packages/vectis", "contracts/core/*" ]
# members = [ "packages/vectis", "contracts/core/*", "contracts/authenticators/*" ]
exclude = ["packages/images"]
resolver = "2"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[workspace.dependencies]
cosmwasm-std = { version = "^1.2", features = ["iterator", "ibc3", "staking", "cosmwasm_1_2"] }
cosmwasm-storage = "^1.2" 
cosmwasm-schema = "^1.2" 
sylvia = "0.7.0"
sylvia-derive = "0.7.0"
cw-utils = "1.0.1"
thiserror = { version = "1.0.30" }
cw-storage-plus = "1.1"
cw2 = "1.1"
cw3 = "1.1"
cw4 = "1.1"
cw4-group = "1.1"
anyhow = { version = "1.0.51"}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-wasm = "0.5.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
ripemd160 = "0.9.1"
cosmos-sdk-proto = { version = "0.19.0", default-features = false, features = ["cosmwasm"] }
#getrandom = { version = "0.2", features = ["js"] }

