[workspace]
members = ["packages/*", "contracts/core/*", "contracts/authenticators/*", "contracts/test-contracts/*" ]
resolver = "2"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[workspace.dependencies]
cosmwasm-std = { version = "^1.2", features = ["iterator", "ibc3", "staking", "cosmwasm_1_2"] }
cosmwasm-storage = "^1.2"
cosmwasm-schema = "^1.2"
sylvia = { version = "0.9.2", features = ["iterator", "stargate", "cosmwasm_1_2"]}
sylvia-derive = "0.9.2"
cw-utils = "1.0.1"
thiserror = { version = "1.0.50" }
cw-storage-plus = "1.1"
cw2 = "1.1"
cw3 = "1.1"
cw4 = "1.1"
cw4-group = "1.1"
anyhow = { version = "1.0.51"}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-wasm = "0.5.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
ripemd160 = "0.9.1"
cosmos-sdk-proto = { package = "cosmos-sdk-proto-nymlab", version = "0.19.2", default-features = false, features = ["cosmwasm"]}
