[package]
name = "vectis-dao-tunnel"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>",  "j0nl1 <jonlitech@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
migration = []

[dependencies]
cosmwasm-std = { version = "1.1.0", features = ["iterator", "ibc3"] }
cosmwasm-schema = { version = "1.1.4" }
cw-storage-plus = { version = "0.14.0" }
cw-utils = { version = "0.14.0" }
cw2 = { version = "0.13.4" }
thiserror = { version = "1.0.37" }
vectis-wallet = {path = "../../packages/vectis"}

[dev-dependencies]
voting = {git = "https://github.com/nymlab/dao-contracts",  rev = "b82db3243688a5e6ad"}
