[package]
name = "vectis-factory"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "iorveth <aenseidheiorweth@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta7" }
cw-storage-plus = "0.13.0"
cw1 = "0.13.0"
cw2 = "0.13.0"
cw20 = "0.13.0"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
derivative = "2"
hex = "0.4"
cw-utils = "0.11" # required lower version due to stake-cw20
# Vectis libs
vectis-proxy = { path = "../proxy", features = ["library"]}
vectis-govec = { path = "../govec", features = ["library"]}
vectis-wallet = {path = "../../packages/vectis"}

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = { version = "1.0.0-beta7" }
assert_matches = "1"
cw-multi-test = "0.13.0"
secp256k1 = {version = "0.20", features = ["bitcoin_hashes"]}
cw3 = "0.13.0"
cw3-fixed-multisig = { version = "0.13.0", features = ["library"] }
stake-cw20 = "0.2.6"
vectis-proxy = { path = "../proxy", features = ["migration", "library"]}
