[package]
name = "vectis-factory"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "iorveth <aenseidheiorweth@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
remote = ["vectis-remote-tunnel"]
dao-chain= ["vectis-govec"]

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-schema = { version = "1.1.5" }
cw-storage-plus = "0.13"
cw1 = "0.13"
cw2 = "0.13"
cw20 = "0.13"
thiserror = { version = "1.0.26" }
derivative = "2"
hex = "0.4"
cw-utils = "0.13" # required lower version due to stake-cw20
# Vectis libs
vectis-proxy = { path = "../proxy", features = ["library"]}
vectis-govec = { path = "../govec", features = ["library"], optional = true}
vectis-wallet = {path = "../../packages/vectis" }
vectis-remote-tunnel = {path = "../remote_tunnel", features = ["library"], optional = true}

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = { version = "1.0.0-beta" }
assert_matches = "1"
cw-multi-test = { version = "0.13.2" }
secp256k1 = {version = "0.20", features = ["bitcoin_hashes"]}
cw3 = "0.13"
cw3-fixed-multisig = { version = "0.13", features = ["library"] }
cw20-stake = { git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v1.0.0", features = ['library'] }
vectis-proxy = { path = "../proxy", features = ["migration", "library"]}
