[package]
name = "vectis-factory"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "iorveth <aenseidheiorweth@gmail.com>",  "j0nl1 <jonlitech@gmail.com>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw1 = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-utils= { workspace = true }
thiserror = { workspace = true }
derivative = "2"

# Vectis libs
vectis-wallet = {path = "../../packages/vectis" }

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cosmwasm-schema = { workspace = true }
cw-multi-test = { workspace = true }
cw3 = { workspace = true }
cw3-fixed-multisig = "0.16"
vectis-proxy = { path = "../proxy", features = ["migration", "library"]}
