[package]
name = "vectis-govec"
version = "0.1.0"
edition = "2021"
description = "Whitelisted governance token contract. Not cw20 compatible"
repository = "https://github.com/nymlab/vectis"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
cw-storage-plus = "0.13"
cw-utils = "0.11"
cw1 = "0.13"
cw2 = "0.13"
cw20 =  "0.13"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
derivative = "2"
hex = "0.4"
stake-cw20 = {version = "0.2.6", features = ['library']}
vectis-wallet = {path = "../../packages/vectis"}

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
