[package]
name = "vectis-govec"
version = "0.1.0"
edition = "2021"
description = "Whitelisted governance token contract. Not cw20 compatible"
repository = "https://github.com/nymlab/vectis"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }
cw1 = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-stake = { workspace = true, features = ["library"] }
thiserror = { workspace = true }
derivative = "2"
vectis-wallet = {path = "../../packages/vectis"}

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
