[package]
name = "vectis-ibc-host"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
migration = []

[dependencies]
cw-storage-plus = { version = "0.13.4" }
cw-utils = { version = "0.13.4" }
cw2 = { version = "0.13.4" }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
sha2 = "0.9"
hex = { version = "0.4", default-features = false }
vectis-wallet = { path = "../../packages/vectis" }
cosmwasm-std = { version = "1.0.0", features = ["iterator", "ibc3"] }


[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
