[package]
name = "vectis-plugin-registry"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "j0nl1 <j0nl1@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test", "anyhow"]

[dependencies]
cosmwasm-std = { version = "1.1.9" }
cosmwasm-schema = { version = "1.1.9" }
serde = { version = "1", default-features = false, features = ["derive"] }
cw-storage-plus = "1.0.1"
sylvia = "0.2.2"
sylvia-derive = "0.2.2"
cw2 = "1.0.1"
cw-utils = "1.0.1"
thiserror = { version = "1.0.38" }
anyhow = { version = "1.0.68", optional = true }
cw-multi-test = { version = "0.16.2", optional = true }

[dev-dependencies]
anyhow = "1"
cw-multi-test = "0.16"