[package]
name = "vectis-plugin-registry"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "j0nl1 <j0nl1@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test", "anyhow"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
serde = { version = "1", default-features = false, features = ["derive"] }
cw-storage-plus = { workspace = true }
sylvia = "0.2.2"
sylvia-derive = "0.2.2"
cw2 = "1.0.1"
cw-utils = "1.0.1"
thiserror = { workspace = true }
anyhow = { version = "1.0.68", optional = true}
cw-multi-test = {  workspace = true, optional = true  }
vectis-wallet = { path = "../../packages/vectis" }


[dev-dependencies]
anyhow = { version = "1.0.68" }
cw-multi-test = {  workspace = true  }
