[package]
name = "vectis-proxy"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "iorveth <aenseidheiorweth@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
migration = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = "0.13"
cw1 = "0.13"
cw2 = "0.13"
cw3-fixed-multisig = { version = "0.13", features = ["library"] }
cw3 = "0.13"
cw-utils = "0.13"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
sha2 = "0.9"
hex = { version = "0.4", default-features = false }
vectis-wallet = { path = "../../packages/vectis" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
secp256k1 = {version = "0.20", features = ["bitcoin_hashes"]}
