[package]
name = "vectis-proxy"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "iorveth <aenseidheiorweth@gmail.com>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
migration = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
cw1 = { workspace = true }
cw2 = { workspace = true }
cw3-fixed-multisig = { version = "0.16", features = ["library"] }
cw3 = { workspace = true }
cw20 = { workspace = true }
cw-utils= { workspace = true }
thiserror = { version = "1.0.26" }
sha2 = "0.9"
vectis-wallet = { path = "../../packages/vectis" }
vectis-plugin-registry = {path = "../plugin_registry"}

[dev-dependencies]
vectis-wallet = {path = "../../packages/vectis", features = ["test_utils"]}
