[package]
name = "vectis-remote-factory"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "iorveth <aenseidheiorweth@gmail.com>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw1 = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-utils= { workspace = true }
thiserror = { workspace = true }
derivative = "2"

# Vectis libs
vectis-wallet = {path = "../../packages/vectis" }

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = { workspace = true }
assert_matches = "1"
cw-multi-test = { workspace = true }
cw3 = { workspace = true }
cw3-fixed-multisig = { version = "0.16", features = ["library"] }
cw20-stake = { workspace = true, features = ["library"] }
vectis-proxy = { path = "../proxy", features = ["migration", "library"]}
