[package]
name = "vectis-remote-tunnel"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "j0nl1 <jonlitech@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1.0", features = ["iterator", "ibc3", "staking"] }
cosmwasm-schema = { version = "1.1.4" }
cw-storage-plus = { version = "0.14.0" }
cw-utils = { version = "0.14.0" }
thiserror = { version = "1.0.37" }
vectis-wallet = {path = "../../packages/vectis"}

[dev-dependencies]
