[package]
name = "vectis-remote-tunnel"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "j0nl1 <jonlitech@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils= { workspace = true }
thiserror = { workspace = true }
vectis-wallet = {path = "../../packages/vectis" }
cosmwasm-schema = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
