[package]
name = "vectis-contract-tests"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "iorveth <aenseidheiorweth@gmail.com>"]
edition = "2021"
publish = false

[[test]]
name = "multi-contracts-integration-tests"
path = "tests/lib.rs"

[features]
dao-chain = ["vectis-factory/dao-chain"]
remote = ["vectis-factory/remote"]


# [features]
# dao-chain = ["vectis-factory/dao-chain", "vectis-proxy/dao-chain", "vectis-govec", "vectis-dao-tunnel"]
# remote = ["vectis-factory/remote", "vectis-proxy/remote", "vectis-remote-tunnel"]

[dev-dependencies]
vectis-factory = { path = "../factory" }
vectis-proxy = { path = "../proxy", features = ["migration", "library"]}
vectis-govec = { path = "../govec", features = ["library"]}
vectis-dao-tunnel = {path = "../dao_tunnel", features = ["library"]}
vectis-remote-tunnel = {path = "../remote_tunnel", features = ["library"]}
anyhow = "1"
assert_matches = "1"
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw-storage-plus = "0.13"
cw1 = "0.13"
cw2 = "0.13"
cw20 =  "0.13"
cw3-fixed-multisig = { version = "0.13", features = ["library"] }
cw3 = "0.13"
cw-utils = "0.13"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
sha2 = "0.9"
hex = { version = "0.4", default-features = false }
cosmwasm-schema = { version = "1.0.0" }
secp256k1 = {version = "0.20", features = ["bitcoin_hashes"]}
vectis-wallet = { path = "../../packages/vectis" }
cw20-stake = {git = "https://github.com/nymlab/dao-contracts",  rev = "be92da6edb8bee49a7"}
cw-core = {git = "https://github.com/nymlab/dao-contracts",  rev = "be92da6edb8bee49a7"}
cw20-staked-balance-voting = {git = "https://github.com/nymlab/dao-contracts",  rev = "be92da6edb8bee49a7"}
cw-proposal-single = {git = "https://github.com/nymlab/dao-contracts",  rev = "be92da6edb8bee49a7"}
voting = {git = "https://github.com/nymlab/dao-contracts",  rev = "be92da6edb8bee49a7"}
cw-multi-test = { version = "0.13.2" }
derivative = "2"
