[package]
name = "test-vectis-pre-tx"
version = "1.0.0-rc1"
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmos-sdk-proto = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
sylvia = { workspace = true }
sylvia-derive = { workspace = true }
serde = {workspace = true}
serde-json-wasm = {workspace = true}
cw2 = { workspace = true }
cw-utils= { workspace = true }
vectis-wallet = { path = "../../../packages/vectis" }
